[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/pickup_ring.png" type="Texture" id=1]
[ext_resource path="res://scripts/MGF_Ring.gd" type="Script" id=2]
[ext_resource path="res://scenes/EffectFalling.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 27.1821

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="MGF_Ring" type="Node2D"]
position = Vector2( 0, 10 )
z_index = 1
script = ExtResource( 2 )

[node name="MGF_Ring" type="Area2D" parent="."]

[node name="EffectFalling" parent="MGF_Ring" instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0.392157 )
self_modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 0, -10 )
scale = Vector2( 0.6, 0.8 )

[node name="Sprite" type="Sprite" parent="MGF_Ring"]
position = Vector2( 0, -10 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MGF_Ring"]
position = Vector2( 0, -10 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MGF_Ring"]
anims/fade_out = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="MGF_Ring"]
position = Vector2( 4.76837e-06, -10 )
scale = Vector2( 4, 4 )

[node name="TimerRing" type="Timer" parent="."]
wait_time = 6.0
autostart = true
[connection signal="body_entered" from="MGF_Ring" to="." method="_on_MGF_Ring_body_entered"]
[connection signal="screen_exited" from="MGF_Ring/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="TimerRing" to="." method="_on_TimerRing_timeout"]
